-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 25, 26
-
Component/s: hotspot
-
b18
-
riscv
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8369523 | 25.0.2 | Robbin Ehn | P4 | Resolved | Fixed | b02 |
As specified in ziccif (mandatory in RVA20U64): Any instruction fetches of naturally aligned power-of-2 sizes up to min(ILEN,XLEN) are atomic.
When overwriting a 4b NOP with 'ILL' the NOP needs to be aligned.
When overwriting a 4b NOP with 'ILL' the NOP needs to be aligned.
- backported by
-
JDK-8369523 RISC-V: Align post call nop
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk25u/09226178
-
Commit(master)
openjdk/jdk/07ecc93d
-
Review(master)
openjdk/jdk25u/280
-
Review(master)
openjdk/jdk25u/281
-
Review(master)
openjdk/jdk/27467
(1 links to)