8367692: RISC-V: Align post call nop

Reviewed-by: fyang, fjiang, mli